Retrieve email and name from Google OpenID, Add the FetchEmails job (don't forget to conf/credentials.conf file)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,6 +2,12 @@
 # ~~~~~
 application.name=greatpeople
 
+# Credentials
+# Must contain:
+# - mailbox.username=toto@gmail.com
+# - mailbox.password=azertyuiop
+@include.credentials=credentials.conf
+
 # Application mode
 # ~~~~~
 # Set to dev to enable instant reloading and other development help.
