Rename Resume as JobApplication

--- a/conf/bootstrap/initialdata.yml
+++ b/conf/bootstrap/initialdata.yml
@@ -1,10 +1,10 @@
-Resume(michel):
+JobApplication(michel):
     name: Michel Chel
     phone: 0607080910
     status: 0
     email: michel.chel@hotmail.com
 
-Resume(monique):
+JobApplication(monique):
     name: Monique Laplace
     phone: 0107080910
     status: 0
