--- a/conf/bootstrap/initialdata.yml
+++ b/conf/bootstrap/initialdata.yml
@@ -1,13 +1,11 @@
 JobApplication(michel):
     name: Michel Chel
+    submitted: 2010-11-15
     phone: 0607080910
-    status: 0
     email: michel.chel@hotmail.com
 
 JobApplication(monique):
     name: Monique Laplace
+    submitted: 2010-10-26
     phone: 0107080910
-    status: 0
     email: monique.laplace@gmail.com
-
-
