Add confirmation email

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -163,7 +163,7 @@ attachments.path=data/attachments
 # Mail configuration
 # ~~~~~ 
 # Default is to use a mock Mailer
-mail.smtp=mock
+# mail.smtp=mock
 
 # Or, specify mail host configuration
 # mail.smtp.host=127.0.0.1
