Notes and Messages

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -90,7 +90,7 @@ date.format=yyyy-MM-dd
 db=mem
 #
 # To connect to a local MySQL5 database, use:
-# db=mysql:user:pwd@database_name
+%gbo.db=mysql:root@greatpeople
 #
 # If you need a full JDBC configuration use the following :
 # db.url=jdbc:postgresql:database_name
@@ -188,7 +188,7 @@ attachments.path=data/attachments
 # dynamically link error pages to files 
 #
 # Example, for textmate:
-# play.editor=txmt://open?url=file://%s&line=%s
+%gbo.play.editor=txmt://open?url=file://%s&line=%s
 
 # Testing. Set up a custom configuration for test mode
 # ~~~~~
