--- a/conf/application.conf
+++ b/conf/application.conf
@@ -65,12 +65,8 @@ date.format=yyyy-MM-dd
 
 # Session configuration
 # ~~~~~~~~~~~~~~~~~~~~~~
-# By default, session will be written to the transient PLAY_SESSION cookie.
-# The cookies are not secured by default, only set it to true
-# if you're serving your pages through https.
-# application.session.cookie=PLAY
-# application.session.maxAge=1h
-# application.session.secure=false
+application.session.maxAge=30min
+application.session.httpOnly=true
 
 # JVM configuration
 # ~~~~~
