--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,7 +36,7 @@ module.secure=${play.path}/modules/secure
 module.playapps=${play.path}/modules/playapps-1.3
 %scr.module.playapps=${play.path}/modules/playapps-1.2
 module.greenscript=modules/greenscript-1.2b
-module.search=${play.path}/modules/search-2.0
+module.search=modules/search-2.0
 
 # Search Module
 play.search.reindex=enabled
