Fix attachment content type

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -7,6 +7,7 @@
 # This is the main configuration file for the application.
 # ~~~~~
 application.name=greatpeople
+#application.log=DEBUG
 
 # Credentials
 # Must contain:
