--- a/conf/bootstrap/initialdata.yml
+++ b/conf/bootstrap/initialdata.yml
@@ -4,7 +4,7 @@ JobApplication(michel):
     phone: 0607080910
     status: NEW
     email: michel.chel@hotmail.com
-    message: JEE Architect Spring Pattern
+    message: JEE Architect Spring Pattern http://www.java.net hello
     tags: dev enterprise
 
 JobApplication(monique):
