Better handling of accents in stub

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,7 +39,7 @@ module.playapps=${play.path}/modules/playapps-1.4
 # module.search=modules/search-2.0
 
 # Search Module
-play.search.reindex=enabled
+# play.search.reindex=enabled
 play.search.password=admin
 
 # i18n
